v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__forward_headers_user.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "__value": {
            "response": {
              "token": "64a6c518-4a5b-4067-a99f-3abc11eeeacf",
              "expiry": "2025-12-12T05:48:33+0000"
            }
          }
        }
      ]
    }
  ]
}
