v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__model_argument_presets_select_many_admin.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "actor_id": 4,
          "movie_id": 3,
          "name": "Al Pacino"
        },
        {
          "actor_id": 5,
          "movie_id": 3,
          "name": "Robert De Niro"
        }
      ]
    }
  ]
}
