v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__model_argument_presets_select_many_user_1.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "actor_id": 6,
          "movie_id": 4,
          "name": "Morgan Freeman"
        }
      ]
    }
  ]
}
