v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__model_argument_presets_select_many_user_2.snap
---
source: crates/engine/tests/common.rs
expression: results
---
{
  "ActorsByMovieMany": {
    "Err": "internal error: ndc_unexpected: ndc_client error: connector error: connector returned status code 400 Bad Request with message: missing argument movie_id"
  },
  "noargs": {
    "Err": "internal error: ndc_unexpected: ndc_client error: connector error: connector returned status code 400 Bad Request with message: missing argument movie_id"
  }
}
