v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__multiple_arguments_admin.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
[
  {
    "rows": [
      {
        "__value": [
          {
            "actor_id": 4,
            "movie_id": 3,
            "name": "Al Pacino"
          },
          {
            "actor_id": 5,
            "movie_id": 3,
            "name": "Robert De Niro"
          },
          {
            "actor_id": 6,
            "movie_id": 4,
            "name": "Morgan Freeman"
          },
          {
            "actor_id": 7,
            "movie_id": 5,
            "name": "Ben Kingsley"
          }
        ]
      }
    ]
  }
]
